vbnc/vbnc/tests/Errors/32106-1.vb

Structure A
End Structure

Class B(Of T As Class)
    Function M() As b(Of A)
        Return Nothing
    End Function
End Class